feat: jwt token verification set up
