# cmd/api/api.go
@@ -13,15 +13,17 @@ import (
 	"go.uber.org/zap"
 
 	"github.com/temideewan/go-social/docs" // required to generate the swagger docs
+	"github.com/temideewan/go-social/internal/auth"
 	"github.com/temideewan/go-social/internal/mailer"
 	"github.com/temideewan/go-social/internal/store"
 )
 
 type application struct {
-	config config
-	store  store.Storage
-	logger *zap.SugaredLogger
-	mailer mailer.Client
+	config        config
+	store         store.Storage
+	logger        *zap.SugaredLogger
+	mailer        mailer.Client
+	authenticator auth.Authenticator
 }
 
 type config struct {
@@ -36,6 +38,12 @@ type config struct {
 
 type authConfig struct {
 	basic basicConfig
+	token tokenConfig
+}
+type tokenConfig struct {
+	secret string
+	exp    time.Duration
+	iss    string
 }
 
 type basicConfig struct {
@@ -117,6 +125,7 @@ func (app *application) mount() http.Handler {
 		})
 		r.Route("/authentication", func(r chi.Router) {
 			r.Post("/user", app.registerUserHandler)
+			r.Post("/token", app.createTokenHandler)
 		})
 	})
 	return r
